syntax = 'proto3';

package note;

service NoteService {
    rpc GetNotes (EmptyReq) returns (NoteListRes);
    rpc GetUsers (EmptyReq) returns (UserListRes);
}

message EmptyReq{}

message NoteListRes{
    repeated Note notes = 1;
}

message Note {
    string id = 1;
    string note = 2;
    string user = 3;
    bool important = 4;
}

message UserListRes{
    repeated User users = 1;
}

message User {
    string id = 1;
    string name = 2;
    repeated Note note = 3;
}
