syntax = "proto3";

package user;

service UserService {
    rpc GetUser (GetUserRequest) returns (GetUserResponse) {}
    rpc Login (LoginRequest) returns (LoginResponse) {}
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {}
}

message CreateUserRequest {
    string name = 1;
    string email = 2;
    string username = 3;
    string password = 4;
}

message CreateUserResponse {
    int32 id = 1;
    string name = 2;
    string email = 3;
    string username = 4;
    string access_token = 5;
    string refresh_token = 6;
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
}

message GetUserRequest {
    string id = 1;
}

message GetUserResponse {
    string id = 1;
    string name = 2;
    string email = 3;
}
